--- a/testcompose/app/build.gradle
+++ b/testcompose/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.1'
     implementation project(path: ':recipeAppData')
     implementation project(path: ':recipe-navigation')
+    implementation project(path: ':recipe-list')
+    implementation project(path: ':recipe-detail')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -69,6 +71,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation("io.coil-kt:coil-compose:2.2.2")
-    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
 }
