--- a/testcompose/recipe-list/build.gradle
+++ b/testcompose/recipe-list/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -8,7 +8,6 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.recipe_list"
         minSdk 23
         targetSdk 33
         versionCode 1
@@ -56,6 +55,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.1'
     implementation project(path: ':recipeAppData')
     implementation 'androidx.compose.material:material:1.3.1'
+    implementation project(path: ':recipe-domain')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -63,4 +63,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
 }
