--- a/testcompose/recipe-navigation/build.gradle
+++ b/testcompose/recipe-navigation/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha01"
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
