--- a/testcompose/build.gradle
+++ b/testcompose/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         compose_version = '1.3.2'
         kotlin_version = '1.7.20'
+        hilt_version = '2.42'
     }
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -10,4 +11,5 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
