--- a/testcompose/recipe-detail/build.gradle
+++ b/testcompose/recipe-detail/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.1'
     implementation project(path: ':recipeAppData')
     implementation project(path: ':recipe-domain')
+    implementation project(path: ':recipe-shared-components')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
