--- a/testcompose/recipe-list/build.gradle
+++ b/testcompose/recipe-list/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation project(path: ':recipeAppData')
     implementation 'androidx.compose.material:material:1.3.1'
     implementation project(path: ':recipe-domain')
+    implementation project(path: ':recipe-shared-components')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
