--- a/testcompose/recipe-core/build.gradle
+++ b/testcompose/recipe-core/build.gradle
@@ -17,8 +17,14 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    buildFeatures {
+        buildConfig = true
+    }
+
     buildTypes {
         release {
+            buildConfigField "String", "BASE_URL", "\"https://api.edamam.com\""
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
