added buildconfig for debug variants

--- a/testcompose/recipe-core/build.gradle
+++ b/testcompose/recipe-core/build.gradle
@@ -22,6 +22,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "BASE_URL", "\"https://api.edamam.com\""
+
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+        }
         release {
             buildConfigField "String", "BASE_URL", "\"https://api.edamam.com\""
 
